made navbar fixed and hide on small screen sizes

--- a/app/static/welcome.scss
+++ b/app/static/welcome.scss
@@ -172,7 +172,7 @@ nav
   font-family: 'Lato', sans-serif;
   margin: 15vh 0 15vh 0;
   h3 {
-    padding: 10px 0 10px 0;
+    padding: 25px 0 10px 0;
   }
   .valign-wrapper {
     flex-wrap: wrap;
